# viridian

./: README.md
etc/: bad-ips  bashrc  vir-bashrc
src/motd/: CMakeLists.txt  uptime.cpp  uptime.h  viridian-motd.cpp
